# document-qa-backend

./: .env.example  .gitignore  .pylintrc  Aptfile  README.md  mypy.ini  py.typed  pyproject.toml  requirements.txt  run.py  test_metrics.py  test_together.py
.github/workflows/: ci.yml
app/: __init__.py  main.py  py.typed
app/api/: api.py  routes.py
app/api/endpoints/: metrics.py  test.py
app/core/: __init__.py  config.py  connection.py  dependencies.py  error_recovery.py  exceptions.py  logger.py
app/core/stubs/: magic.pyi
app/models/: __init__.py  schemas.py
app/services/: document.py  document_storage.py  llm.py
app/ui/: __init__.py  app.py  interface.py  run_ui.py
document-qa-backend/tests/: test_document_service.py  test_regression.py
performance_logs/: performance_metrics.md
stubs/: uvicorn.pyi
stubs/magic/: __init__.pyi
tests/: test_regression.py
